tests/baselines/reference/assignmentCompatability23.errors.txt
==== tests/cases/compiler/assignmentCompatability23.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var obj = {two: [true]};
        export var __val__obj = obj;
    }
    __test2__.__val__obj = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability23.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to '{ two: boolean[]; }':
!!! 	Property 'two' defined as optional in type '__test1__.interfaceWithPublicAndOptional<T, U>', but is required in type '{ two: boolean[]; }'.